essay.html gallery.html index.html recomendations.html src collection.html

--- a/essay.html
+++ b/essay.html
@@ -92,6 +92,7 @@
         <ul><span class="bar-title">目录</span>
             <li><span class="column-date">2026.1</span>
                 <ul>
+                    <li><a href="#note-13" onclick="highlightLink(this)">random poetry composition</a></li>
                     <li><a href="#note-12" onclick="highlightLink(this)">abt献给阿尔吉侬的花束</a></li>
                     <li><a href="#note-11" onclick="highlightLink(this)">学习#d4</a></li>
                     <li><a href="#note-10" onclick="highlightLink(this)">学习#d3</a></li>
@@ -231,27 +232,28 @@
             </div>
         </div> -->
 
-        <!-- <div class="note" id="note-">
+        <div class="note" id="note-13">
             <div class="note-header">
-                <div class="note-title">标题</div>
+                <div class="note-title">random poetry composition</div>
                 <div class="note-info">
                     <div class="note-date">
                         <span class="date-icon"></span>
-                        <span>日期</span>
+                        <span>2026.1.31</span>
                     </div>
-                    <div class="note-mood">心情</div>
+                    <div class="note-mood"></div>
                     <div class="note-tags">
-                        <a href="#" class="note-tag">标签</a>
+                        <a href="#" class="note-tag">诗歌</a>
+                        <a href="#" class="note-tag">只是脑子里随便冒出来的句子没有什么内涵请勿批判</a>
                     </div>
                 </div>
             </div>
             <div class="note-content">
-            <p></p>
+            <p>I found myself straying in the garden.<br>Rosemary thistles intertwined amongst where spring has rotten.<br>Mint, as its scent stings my nostrils,<br>Heaved its fiber wings, trembling through the ordeal. <br>Through thy soul warm beam withers,<br>And in bleak barren mine chars into ember. <br>May her footsteps lead her afar, <br>For behind every flesh ornament underlies a ghosting scar. </p>
             </div> 
             <div class="note-photo-container">
                 <img src=>
             </div>
-        </div> -->
+        </div>
         
         <div class="note" id="note-12">
             <div class="note-header">
@@ -603,6 +605,10 @@
             <span class="bar-title-right">近期更新</span>
             <ul>
                 <li>
+                    <a href="essay.html#note-13">random poetry composition</a>
+                    <span class="small">2026.1.31</span>
+                </li>
+                <li>
                     <a href="essay.html#note-12">abt献给阿尔吉侬的花束</a>
                     <span class="small">2026.1.30</span>
                 </li>
@@ -617,10 +623,6 @@
                 <li>
                     <a href="essay.html#note-9">学习#d2</a>
                     <span class="small">2026.1.15</span>
-                </li>
-                <li>
-                    <a href="essay.html#note-8">总之就是又开始学习了</a>
-                    <span class="small">2026.1.14</span>
                 </li>
             </ul>
         </div>
