--- a/index.html
+++ b/index.html
@@ -101,16 +101,16 @@
     <!-- 近期更新 -->
     <ul class="update">近期更新
         <li>
+            <a href="essay.html#note-13">random poetry composition</a>
+            <span class="small">2026.1.31</span>
+        </li>
+        <li>
             <a href="essay.html#note-12">abt献给阿尔吉侬的花束</a>
             <span class="small">2026.1.30</span>
         </li>
         <li>
             <a href="essay.html#note-11">学习#d4</a>
             <span class="small">2026.1.19</span>
-        </li>
-        <li>
-            <a href="essay.html#note-10">学习#d3</a>
-            <span class="small">2026.1.16</span>
         </li>
     </ul>
 
