--- a/recomendations.html
+++ b/recomendations.html
@@ -347,6 +347,10 @@
             <span class="bar-title-right">近期更新</span>
             <ul>
                 <li>
+                    <a href="essay.html#note-13">random poetry composition</a>
+                    <span class="small">2026.1.31</span>
+                </li>
+                <li>
                     <a href="essay.html#note-12">abt献给阿尔吉侬的花束</a>
                     <span class="small">2026.1.30</span>
                 </li>
@@ -361,10 +365,6 @@
                 <li>
                     <a href="essay.html#note-9">学习#d2</a>
                     <span class="small">2026.1.15</span>
-                </li>
-                <li>
-                    <a href="essay.html#note-8">总之就是又开始学习了</a>
-                    <span class="small">2026.1.14</span>
                 </li>
             </ul>
         </div>
