essay.html gallery.html index.html recomendations.html src collection.html

--- a/gallery.html
+++ b/gallery.html
@@ -1045,7 +1045,7 @@
             <span class="bar-title-right">近期更新</span>
             <ul>
                 <li>
-                    <a href="essay.html#note-13">random poetry composition</a>
+                    <a href="essay.html#note-13">Random Roetry Composition</a>
                     <span class="small">2026.1.31</span>
                 </li>
                 <li>
