--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <!-- 近期更新 -->
     <ul class="update">近期更新
         <li>
-            <a href="essay.html#note-13">random poetry composition</a>
+            <a href="essay.html#note-13">Random Roetry Composition</a>
             <span class="small">2026.1.31</span>
         </li>
         <li>
