essay.html gallery.html index.html recomendations.html src collection.html

--- a/essay.html
+++ b/essay.html
@@ -92,7 +92,7 @@
         <ul><span class="bar-title">目录</span>
             <li><span class="column-date">2026.1</span>
                 <ul>
-                    <li><a href="#note-13" onclick="highlightLink(this)">Random Roetry Composition</a></li>
+                    <li><a href="#note-13" onclick="highlightLink(this)">Random Poetry Composition</a></li>
                     <li><a href="#note-12" onclick="highlightLink(this)">abt献给阿尔吉侬的花束</a></li>
                     <li><a href="#note-11" onclick="highlightLink(this)">学习#d4</a></li>
                     <li><a href="#note-10" onclick="highlightLink(this)">学习#d3</a></li>
@@ -234,7 +234,7 @@
 
         <div class="note" id="note-13">
             <div class="note-header">
-                <div class="note-title">Random Roetry Composition</div>
+                <div class="note-title">Random Poetry Composition</div>
                 <div class="note-info">
                     <div class="note-date">
                         <span class="date-icon"></span>
@@ -605,7 +605,7 @@
             <span class="bar-title-right">近期更新</span>
             <ul>
                 <li>
-                    <a href="essay.html#note-13">Random Roetry Composition</a>
+                    <a href="essay.html#note-13">Random Poetry Composition</a>
                     <span class="small">2026.1.31</span>
                 </li>
                 <li>
