--- a/src collection.html
+++ b/src collection.html
@@ -216,7 +216,7 @@
             <span class="bar-title-right">近期更新</span>
             <ul>
                 <li>
-                    <a href="essay.html#note-13">Random Roetry Composition</a>
+                    <a href="essay.html#note-13">Random Poetry Composition</a>
                     <span class="small">2026.1.31</span>
                 </li>
                 <li>
