essay.html gallery.html index.html recomendations.html src collection.html

--- a/gallery.html
+++ b/gallery.html
@@ -1170,6 +1170,10 @@
             <span class="bar-title-right">近期更新</span>
             <ul>
                 <li>
+                    <a href="gallery.html#memes">相册>memes</a>
+                    <span class="small">2026.2.1</span>
+                </li>
+                <li>
                     <a href="essay.html#note-13">Random Roetry Composition</a>
                     <span class="small">2026.1.31</span>
                 </li>
@@ -1184,10 +1188,6 @@
                 <li>
                     <a href="essay.html#note-10">学习#d3</a>
                     <span class="small">2026.1.16</span>
-                </li>
-                <li>
-                    <a href="essay.html#note-9">学习#d2</a>
-                    <span class="small">2026.1.15</span>
                 </li>
             </ul>
         </div>
