--- a/essay.html
+++ b/essay.html
@@ -605,6 +605,10 @@
             <span class="bar-title-right">近期更新</span>
             <ul>
                 <li>
+                    <a href="gallery.html#memes">相册>memes</a>
+                    <span class="small">2026.2.1</span>
+                </li>
+                <li>
                     <a href="essay.html#note-13">Random Poetry Composition</a>
                     <span class="small">2026.1.31</span>
                 </li>
@@ -619,10 +623,6 @@
                 <li>
                     <a href="essay.html#note-10">学习#d3</a>
                     <span class="small">2026.1.16</span>
-                </li>
-                <li>
-                    <a href="essay.html#note-9">学习#d2</a>
-                    <span class="small">2026.1.15</span>
                 </li>
             </ul>
         </div>
