--- a/essay.html
+++ b/essay.html
@@ -90,6 +90,11 @@
     <!-- 左栏 - 目录 -->
     <div class="left-bar">
         <ul><span class="bar-title">目录</span>
+            <li><span class="column-date">2025.11</span>
+                <ul>
+                    <li><a href="#note-14" onclick="highlightLink(this)">书，你在掠夺我的小珍珠</a></li>
+                </ul>
+            </li>
             <li><span class="column-date">2026.1</span>
                 <ul>
                     <li><a href="#note-13" onclick="highlightLink(this)">Random Poetry Composition</a></li>
@@ -210,27 +215,42 @@
             </div>
         </div> -->
 
-        <!-- <div class="note" id="note-">
+        <div class="note" id="note-14">
             <div class="note-header">
-                <div class="note-title">标题</div>
+                <div class="note-title">书，你在掠夺我的小珍珠</div>
                 <div class="note-info">
                     <div class="note-date">
                         <span class="date-icon"></span>
-                        <span>日期</span>
+                        <span>2026.2.2</span>
                     </div>
-                    <div class="note-mood">心情</div>
+                    <div class="note-mood"></div>
                     <div class="note-tags">
-                        <a href="#" class="note-tag">标签</a>
+                        <a href="#" class="note-tag">阅读</a>
+                        <a href="#" class="note-tag">泪目了</a>
                     </div>
                 </div>
             </div>
             <div class="note-content">
+            <p>SPOILERS ALERT FOR <span class="work-name">The Kite Runner</span>!!</p>
+            <p>Ugggh...it hurts to read stories like this. I'm considering to put off reading <span class="work-name">A Thousand Splendid Suns</span> now cause it traps you in this anguish that assimilates through your bones. </p>
+            <p>My heart twinged when Hassan got raped by Assef, but after finishing the whole book I'm just...numb. That was when all the tradegy started, maybe even ealier, when Baba had sex with that Hazara woman. Looking back, you'll just mourn how careless the days were before the winter of 1975, when the grass was still glistening green and Amir and Hassan still sat under the promegant tree talking freely. My mind just kept fleeting back to those days, just like how Amir and Sohrad shared a childhood memory alike to each other.</p>
+            <p>I <span class="important">almost</span> cried when Baba died. My eyes was <span class="important">literally</span> with tears, but I held on to it since by that time I was reading in public. You see a <span class="important">valiant</span> man wilted into a ill-strickened elder, someone clutching on to his pride in the most desperate times of his life of his life now resigning to aging. All you can do is accept with your heart wrentched in reluctancy. </p>
+            <p>And Hassan...God I don't even want to recall that. A shot of a gun, and then blood went blasting. How light does his live weigh? And how heavy does his loyal heart? It's suffocating.</p>
+            <p>Too immersive to walk myself out.</p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
             <p></p>
             </div> 
             <div class="note-photo-container">
                 <img src=>
             </div>
-        </div> -->
+        </div>
 
         <div class="note" id="note-13">
             <div class="note-header">
@@ -605,6 +625,10 @@
             <span class="bar-title-right">近期更新</span>
             <ul>
                 <li>
+                    <a href="essay.html#note-14">书，你在掠夺我的小珍珠</a>
+                    <span class="small">2026.2.2</span>
+                </li>
+                <li>
                     <a href="gallery.html#memes">相册>memes</a>
                     <span class="small">2026.2.1</span>
                 </li>
@@ -619,10 +643,6 @@
                 <li>
                     <a href="essay.html#note-11">学习#d4</a>
                     <span class="small">2026.1.19</span>
-                </li>
-                <li>
-                    <a href="essay.html#note-10">学习#d3</a>
-                    <span class="small">2026.1.16</span>
                 </li>
             </ul>
         </div>
