--- a/gallery.html
+++ b/gallery.html
@@ -1170,11 +1170,15 @@
             <span class="bar-title-right">近期更新</span>
             <ul>
                 <li>
+                    <a href="essay.html#note-14">书，你在掠夺我的小珍珠</a>
+                    <span class="small">2026.2.2</span>
+                </li>
+                <li>
                     <a href="gallery.html#memes">相册>memes</a>
                     <span class="small">2026.2.1</span>
                 </li>
                 <li>
-                    <a href="essay.html#note-13">Random Roetry Composition</a>
+                    <a href="essay.html#note-13">Random Poetry Composition</a>
                     <span class="small">2026.1.31</span>
                 </li>
                 <li>
@@ -1184,10 +1188,6 @@
                 <li>
                     <a href="essay.html#note-11">学习#d4</a>
                     <span class="small">2026.1.19</span>
-                </li>
-                <li>
-                    <a href="essay.html#note-10">学习#d3</a>
-                    <span class="small">2026.1.16</span>
                 </li>
             </ul>
         </div>
