--- a/src collection.html
+++ b/src collection.html
@@ -107,7 +107,7 @@
                 <div class="note-info">
                     <div class="note-date">
                         <span class="date-icon"></span>
-                        <span>更新日期：2025年12月5日</span>
+                        <span>更新日期：2026年1月26日</span>
                     </div>
                     <div class="note-mood"></div>
                     <div class="note-tags">
@@ -216,6 +216,10 @@
             <span class="bar-title-right">近期更新</span>
             <ul>
                 <li>
+                    <a href="essay.html#note-14">书，你在掠夺我的小珍珠</a>
+                    <span class="small">2026.2.2</span>
+                </li>
+                <li>
                     <a href="gallery.html#memes">相册>memes</a>
                     <span class="small">2026.2.1</span>
                 </li>
@@ -230,10 +234,6 @@
                 <li>
                     <a href="essay.html#note-11">学习#d4</a>
                     <span class="small">2026.1.19</span>
-                </li>
-                <li>
-                    <a href="essay.html#note-10">学习#d3</a>
-                    <span class="small">2026.1.16</span>
                 </li>
             </ul>
         </div>
